--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -12,11 +12,11 @@ dependencies:
     sdk: flutter
   decimal: ^2.3.2
   tsub: ^1.1.0
-  tmodel: ^0.5.1
-  intl: ^0.18.0
+  tmodel_dart: ">=0.5.0 <1.0.0"
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  dart_code_metrics: ^5.5.1
+  flutter_lints: ^2.0.1
+  dart_code_metrics: ^5.7.2
