--- a/packages/bloc/pubspec.yaml
+++ b/packages/bloc/pubspec.yaml
@@ -17,10 +17,10 @@ dependencies:
   subx: ^1.3.0
   provider: ^6.0.5
   tuple: ^2.0.1
-  tmodel: ^0.5.1
+  tmodel: ">=0.5.1 <1.0.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  dart_code_metrics: ^5.5.1
+  flutter_lints: ^2.0.1
+  dart_code_metrics: ^5.7.2
