--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -4,15 +4,15 @@ version: 0.0.6
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 
 environment:
-  sdk: '>=2.19.5 <3.0.0'
-  flutter: ">=1.17.0"
+  sdk: '>=2.19.6 <3.0.0'
+  flutter: ">=3.7.0"
 
 dependencies:
   flutter:
     sdk: flutter
   decimal: ^2.3.2
   tsub: ^1.1.0
-  tmodel_dart: ">=0.5.0 <1.0.0"
+  tmodel: ">=0.5.1 <1.0.0"
   intl: ^0.17.0
 
 dev_dependencies:
