--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -1,6 +1,6 @@
 name: t_helpers
 description: A collection of helper functions to simplify common programming tasks in Dart.
-version: 0.0.6
+version: 0.0.7
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 
 environment:
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   decimal: ^2.3.2
-  tsub: ^1.1.0
-  tmodel: ">=0.5.1 <1.0.0"
+  tsub: ^1.2.0
+  tmodel: ^0.5.2 <1.0.0"
   intl: ^0.17.0
 
 dev_dependencies:
