--- a/packages/bloc/pubspec.yaml
+++ b/packages/bloc/pubspec.yaml
@@ -5,8 +5,8 @@ homepage: https://github.com/tyrcord/t/tree/main/packages/tbloc
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tbloc/issues
 
 environment:
-  sdk: '>=2.19.5 <3.0.0'
-  flutter: ">=3.3.0"
+  sdk: '>=2.19.6 <3.0.0'
+  flutter: ">=3.7.0"
 
 dependencies:
   flutter:
@@ -17,7 +17,7 @@ dependencies:
   subx: ^1.4.0
   provider: ^6.0.5
   tuple: ^2.0.1
-  tmodel: ^0.5.2 <1.0.0"
+  tmodel: ^0.5.2
 
 dev_dependencies:
   flutter_test:
