--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   decimal: ^2.3.2
   tsub: ^1.2.0
-  tmodel: ^0.5.2 <1.0.0"
+  tmodel: ^0.5.2
   intl: ^0.17.0
 
 dev_dependencies:
