--- a/packages/bloc/example/pubspec.yaml
+++ b/packages/bloc/example/pubspec.yaml
@@ -3,14 +3,15 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
-  flutter: ">=3.7.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
   fastyle_dart: ">=1.1.1 <2.0.0"
+  tbloc: ^1.0.0
 
 dev_dependencies:
   flutter_test:
