--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -1,6 +1,6 @@
 name: t_helpers
 description: A collection of helper functions to simplify common programming tasks in Dart.
-version: 0.0.7+3
+version: 0.0.8
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 
 environment:
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   decimal: ^2.3.2
-  tsub: ^1.2.0
-  tmodel: ^0.5.2
+  tsub: ^1.3.0
+  tmodel: ^0.5.3
   intl: ^0.18.0
 
 dev_dependencies:
