--- a/packages/store/pubspec.yaml
+++ b/packages/store/pubspec.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/tyrcord/t/tree/main/packages/tstore
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tstore/issues
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
   flutter: ">=3.10.0"
 
 dependencies:
@@ -19,6 +19,7 @@ dependencies:
   tmodel: ^0.5.3
   tsub: ^1.3.0
   path: ^1.8.3
+
 
 dev_dependencies:
   flutter_test:
