chore: clean up

--- a/melos.yaml
+++ b/melos.yaml
@@ -11,4 +11,6 @@ scripts:
         - tbloc_example
         - tmodel
         - tsub
-    
+  
+  sort_imports:
+    exec: flutter pub run import_sorter:main
