--- a/packages/bloc/pubspec.yaml
+++ b/packages/bloc/pubspec.yaml
@@ -16,12 +16,13 @@ dependencies:
   rxdart: ^0.27.7
   subx: ^1.5.0
   provider: ^6.0.5
-  tuple: ^2.0.1
+  tuple: ^2.0.2
   tmodel: ^0.5.3
   uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
-  dart_code_metrics: ^5.7.2
+  flutter_lints: ^2.0.2
+  dart_code_metrics: ^5.7.5
+  import_sorter: ^4.6.0
