feat: minor improvements

--- a/melos.yaml
+++ b/melos.yaml
@@ -4,13 +4,18 @@ packages:
   - packages/**
 
 scripts:
-  test: 
+  analyze:
+    exec: dart analyze .
+  fix:
+    exec: dart fix --apply
+  test:
     exec: flutter test
     packageFilters:
       ignore:
         - tbloc_example
         - tmodel
         - tsub
-  
+  update:analysis_options:
+    exec: $PWD/scripts/update_analysis_options.sh
   sort_imports:
     exec: flutter pub run import_sorter:main
