--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
 name: t_workspace
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  
+  sdk: ">=3.0.0 <4.0.0"
+
 dev_dependencies:
   melos: ^3.1.0
- 
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^2.0.2
