--- a/packages/sub/pubspec.yaml
+++ b/packages/sub/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/tyrcord/t/tree/main/packages/tsub
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tsub/issues
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
   flutter: ">=3.10.0"
 
 dependencies:
@@ -16,5 +16,5 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.2
-  dart_code_metrics: ^5.7.5
+  dart_code_metrics: ^5.7.6
   import_sorter: ^4.6.0
