--- a/packages/subx/pubspec.yaml
+++ b/packages/subx/pubspec.yaml
@@ -8,16 +8,16 @@ homepage: https://github.com/tyrcord/t/tree/main/packages/subx
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/subx/issues
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
   flutter: ">=3.10.0"
-  
+
 dependencies:
-  async: ^2.9.0
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   rxdart: ^0.27.7
   flutter_lints: ^2.0.2
-  dart_code_metrics: ^5.7.5
+  dart_code_metrics: ^5.7.6
   import_sorter: ^4.6.0
