--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -1,6 +1,6 @@
 name: t_helpers
 description: A collection of helper functions to simplify common programming tasks in Dart.
-version: 0.0.26+1
+version: 0.0.27
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 
 environment:
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   decimal: ^2.3.3
-  tsub: ^1.4.0
-  tmodel: ^0.5.4
+  tsub: ^1.5.0
+  tmodel: ^0.5.5
   intl: ^0.18.0
   rational: ^2.2.2
 
