feat: added value helpers

--- a/packages/model/pubspec.yaml
+++ b/packages/model/pubspec.yaml
@@ -11,6 +11,9 @@ environment:
 dependencies:
   equatable: ^2.0.5
 
+  # T
+  t_helpers: ^0.0.27+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
