chore(release): publish packages
 - subx@1.8.0
 - t_cache@0.0.6
 - t_helpers@0.0.29
 - tbloc@0.21.4
 - tmodel@0.5.8
 - tstore@0.8.15
 - tsub@1.6.0

--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -1,6 +1,6 @@
 name: t_helpers
 description: A collection of helper functions to simplify common programming tasks in Dart.
-version: 0.0.28+1
+version: 0.0.29
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 
 environment:
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   decimal: ^2.3.3
-  tsub: ^1.5.0
-  tmodel: ^0.5.7+1
+  tsub: ^1.6.0
+  tmodel: ^0.5.8
   intl: ^0.18.0
   rational: ^2.2.2
 
