--- a/packages/bloc/example/pubspec.yaml
+++ b/packages/bloc/example/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
-  tbloc: ^0.21.3+3
+  tbloc: ^0.21.4
   fastyle_core: ^0.0.12
 
 dev_dependencies:
