--- a/packages/store/pubspec.yaml
+++ b/packages/store/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tstore
 description: A dart library that helps you to manage and store entity objects.
-version: 0.8.14+1
+version: 0.8.15
 repository: https://github.com/tyrcord/t/tree/main/packages/tstore
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tstore/issues
 
@@ -16,8 +16,8 @@ dependencies:
   rxdart: ^0.27.7
   meta: ^1.9.1
   equatable: ^2.0.5
-  tmodel: ^0.5.7+1
-  tsub: ^1.5.0
+  tmodel: ^0.5.8
+  tsub: ^1.6.0
   path: ^1.8.3
 
 dev_dependencies:
