--- a/packages/model/pubspec.yaml
+++ b/packages/model/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tmodel
-version: 0.5.8
+version: 0.5.8+1
 description: A dart library that helps you to manage model (blueprint) objects.
 homepage: https://github.com/tyrcord/t/tree/main/packages/tmodel
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
@@ -12,7 +12,7 @@ dependencies:
   equatable: ^2.0.5
 
   # T
-  t_helpers: ^0.0.29
+  t_helpers: ^0.0.29+1
 
 dev_dependencies:
   flutter_test:
