--- a/packages/bloc/pubspec.yaml
+++ b/packages/bloc/pubspec.yaml
@@ -11,14 +11,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # Public
   meta: ^1.9.1
   async: ^2.11.0
   rxdart: ^0.27.7
-  subx: ^1.8.0
   provider: ^6.0.5
   tuple: ^2.0.2
-  tmodel: ^0.5.8+1
   uuid: ^3.0.7
+
+  # T
+  subx: ^1.8.0
+  tmodel: ^0.5.8+1
 
 dev_dependencies:
   flutter_test:
