--- a/packages/enhance/pubspec.yaml
+++ b/packages/enhance/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tenhance
 description: A dart library provide a bunch of extenstion.
-version: 0.0.2
+version: 0.0.2+1
 repository: https://github.com/tyrcord/t/tree/main/packages/enhance
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/enhance/issues
 
