--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -1,6 +1,6 @@
 name: t_helpers
 description: A collection of helper functions to simplify common programming tasks in Dart.
-version: 0.0.33
+version: 0.0.34
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 
 environment:
@@ -17,8 +17,8 @@ dependencies:
   rational: ^2.2.2
 
   # T
-  tsub: ^1.6.0
-  tmodel: ^0.5.9+3
+  tsub: ^1.7.0
+  tmodel: ^0.5.10
 
 dev_dependencies:
   flutter_test:
