--- a/packages/bloc/pubspec.yaml
+++ b/packages/bloc/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tbloc
-version: 0.21.6
+version: 0.21.6+1
 description: A dart library that helps you to implement the BLoC pattern.
 homepage: https://github.com/tyrcord/t/tree/main/packages/tbloc
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tbloc/issues
@@ -22,7 +22,7 @@ dependencies:
 
   # T
   subx: ^1.10.0
-  tmodel: ^0.5.10
+  tmodel: ^0.5.10+1
 
 dev_dependencies:
   flutter_test:
