--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -1,6 +1,6 @@
 name: t_helpers
 description: A collection of helper functions to simplify common programming tasks in Dart.
-version: 0.0.35
+version: 0.0.35+1
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 
 environment:
@@ -18,7 +18,7 @@ dependencies:
 
   # T
   tsub: ^1.7.0
-  tmodel: ^0.5.10+1
+  tmodel: ^0.5.10+2
 
 dev_dependencies:
   flutter_test:
