--- a/packages/logger/pubspec.yaml
+++ b/packages/logger/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tlogger
-version: 0.0.0
+version: 0.0.1
 description: A dart library that helps you to logs your app.
 homepage: https://github.com/tyrcord/t/tree/main/packages/logger
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   # T
-  t_helpers: ^0.0.41
+  t_helpers: ^0.0.41+1
 
 dev_dependencies:
   flutter_test:
