--- a/packages/model/pubspec.yaml
+++ b/packages/model/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tmodel
-version: 0.5.11+8
+version: 0.5.11+9
 description: A dart library that helps you to manage model (blueprint) objects.
 homepage: https://github.com/tyrcord/t/tree/main/packages/model
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
@@ -16,7 +16,7 @@ dependencies:
   equatable: ^2.0.5
 
   # T
-  t_helpers: ^0.0.41
+  t_helpers: ^0.0.41+1
 
 dev_dependencies:
   flutter_test:
