--- a/packages/bloc/pubspec.yaml
+++ b/packages/bloc/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tbloc
-version: 0.21.7+9
+version: 0.21.8
 description: A dart library that helps you to implement the BLoC pattern.
 homepage: https://github.com/tyrcord/t/tree/main/packages/tbloc
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tbloc/issues
@@ -21,8 +21,8 @@ dependencies:
   uuid: ^4.2.1
 
   # T
-  subx: ^1.10.0
-  tmodel: ^0.5.11+9
+  subx: ^1.11.0
+  tmodel: ^0.5.12
 
 dev_dependencies:
   flutter_test:
