--- a/packages/logger/pubspec.yaml
+++ b/packages/logger/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tlogger
-version: 0.0.3
+version: 0.0.4
 description: A dart library that helps you to logs your app.
 homepage: https://github.com/tyrcord/t/tree/main/packages/logger
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
@@ -16,8 +16,8 @@ dependencies:
   intl: ^0.18.1
 
   # T
-  t_helpers: ^0.0.41+1
-  tenhance: ^0.0.3
+  t_helpers: ^0.0.42
+  tenhance: ^0.0.4
 
 dev_dependencies:
   flutter_test:
