--- a/packages/bloc/example/pubspec.yaml
+++ b/packages/bloc/example/pubspec.yaml
@@ -9,9 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
+
+  # Public
+  go_router: ^12.1.1
+
+  # T
   tbloc: ^0.21.8+1
-  fastyle_core: ^0.0.23
+
+  # Fastyle
+  fastyle_core: ^0.0.36+1
 
 dev_dependencies:
   flutter_test:
