--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,9 +2,10 @@ name: t_workspace
 
 environment:
   sdk: ">=3.2.0 <4.0.0"
+  flutter: ">=3.16.0"
 
 dev_dependencies:
-  melos: ^3.1.0
+  melos: ^3.2.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
