--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -1,6 +1,6 @@
 name: t_helpers
 description: A collection of helper functions to simplify common programming tasks in Dart.
-version: 0.0.48
+version: 0.0.48+1
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 
 environment:
@@ -20,7 +20,7 @@ dependencies:
 
   # T
   tsub: ^1.9.0
-  tmodel: ^0.5.12+7
+  tmodel: ^0.5.12+8
 
 dev_dependencies:
   flutter_test:
