--- a/packages/enhance/pubspec.yaml
+++ b/packages/enhance/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
     sdk: flutter
 
   # Public
-  go_router: ^12.1.1
+  go_router: ^12.1.3
+  decimal: ^2.3.3
+  t_helpers: ^0.0.48
 
 dev_dependencies:
   flutter_test:
