--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -1,6 +1,6 @@
 name: t_helpers
 description: A collection of helper functions to simplify common programming tasks in Dart.
-version: 0.0.48+2
+version: 0.0.49
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 
 environment:
@@ -20,8 +20,8 @@ dependencies:
 
   # T
   tsub: ^1.9.0
-  tmodel: ^0.5.12+9
-  tenhance: ^0.0.4
+  tmodel: ^0.5.12+10
+  tenhance: ^0.0.5
 
 dev_dependencies:
   flutter_test:
