--- a/packages/store/pubspec.yaml
+++ b/packages/store/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tstore
 description: A dart library that helps you to manage and store entity objects.
-version: 0.8.22+5
+version: 0.8.22+6
 repository: https://github.com/tyrcord/t/tree/main/packages/tstore
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tstore/issues
 
@@ -21,9 +21,9 @@ dependencies:
   path: ^1.8.3
 
   # T
-  tmodel: ^0.5.12+10
+  tmodel: ^0.5.12+11
   tsub: ^1.9.0
-  t_helpers: ^0.0.49
+  t_helpers: ^0.0.49+1
 
 dev_dependencies:
   flutter_test:
