--- a/packages/enhance/pubspec.yaml
+++ b/packages/enhance/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   go_router: ^12.1.3
   decimal: ^2.3.3
   t_helpers: ^0.0.49+1
+  rational: ^2.2.2
 
 dev_dependencies:
   flutter_test:
