--- a/packages/bloc/example/pubspec.yaml
+++ b/packages/bloc/example/pubspec.yaml
@@ -11,13 +11,13 @@ dependencies:
     sdk: flutter
 
   # Public
-  go_router: ^12.1.1
+  go_router: ^13.0.0
 
   # T
   tbloc: ^0.21.8+12
 
   # Fastyle
-  fastyle_core: ^0.0.36+1
+  fastyle_core: ^0.0.45
 
 dev_dependencies:
   flutter_test:
