--- a/.github/workflows/publish_t_cache.yml
+++ b/.github/workflows/publish_t_cache.yml
@@ -1,9 +1,10 @@
-name: Publish TCache to pub.dev
+name: Publish TCache
 
 on:
+  workflow_dispatch:
   push:
     tags:
-      - "t_cache-[0-9]+.[0-9]+.[0-9]+*"
+      - "t_cache-v[0-9]+.[0-9]+.[0-9]+*"
 
 jobs:
   publish:
