--- a/packages/bloc/example/pubspec.yaml
+++ b/packages/bloc/example/pubspec.yaml
@@ -3,7 +3,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^13.0.1
-  tbloc: ^0.22.0
+  tbloc: ^0.22.0+1
 dev_dependencies:
   flutter_lints: ^3.0.1
   flutter_test:
