--- a/packages/logger/pubspec.yaml
+++ b/packages/logger/pubspec.yaml
@@ -2,8 +2,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.18.1
-  t_helpers: ^0.0.51
-  tenhance: ^0.0.8
+  t_helpers: ^0.0.51+1
+  tenhance: ^0.0.8+1
 description: A dart library that helps you to logs your app.
 dev_dependencies:
   flutter_lints: ^3.0.1
@@ -16,4 +16,4 @@ environment:
 homepage: https://github.com/tyrcord/t/tree/main/packages/logger
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
 name: tlogger
-version: 0.0.8
+version: 0.0.9
