--- a/packages/enhance/pubspec.yaml
+++ b/packages/enhance/pubspec.yaml
@@ -3,7 +3,7 @@ dependencies:
     sdk: flutter
   go_router: ^13.0.1
   rational: ^2.2.2
-  t_helpers: ^0.0.51+1
+  t_helpers: ^0.0.52
 description: A dart library provide a bunch of extenstion.
 dev_dependencies:
   flutter_lints: ^3.0.1
@@ -16,4 +16,4 @@ environment:
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/enhance/issues
 name: tenhance
 repository: https://github.com/tyrcord/t/tree/main/packages/enhance
-version: 0.0.8+1
+version: 0.0.8+2
