--- a/packages/model/pubspec.yaml
+++ b/packages/model/pubspec.yaml
@@ -2,7 +2,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  t_helpers: ^0.0.51+1
+  t_helpers: ^0.0.52
 description: A dart library that helps you to manage model (blueprint) objects.
 dev_dependencies:
   flutter_lints: ^3.0.1
@@ -15,4 +15,4 @@ environment:
 homepage: https://github.com/tyrcord/t/tree/main/packages/model
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
 name: tmodel
-version: 0.5.13+1
+version: 0.5.13+2
