--- a/packages/store/pubspec.yaml
+++ b/packages/store/pubspec.yaml
@@ -7,8 +7,8 @@ dependencies:
   meta: ^1.10.0
   path: ^1.8.3
   rxdart: ^0.27.7
-  t_helpers: ^0.0.51+1
-  tmodel: ^0.5.13+1
+  t_helpers: ^0.0.52
+  tmodel: ^0.5.13+2
   tsub: ^1.10.0
 description: A dart library that helps you to manage and store entity objects.
 dev_dependencies:
@@ -22,4 +22,4 @@ environment:
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tstore/issues
 name: tstore
 repository: https://github.com/tyrcord/t/tree/main/packages/tstore
-version: 0.8.24
+version: 0.8.24+1
