chore: added publish actions for each packages

--- a/.github/workflows/publish_thelpers.yml
+++ b/.github/workflows/publish_thelpers.yml
@@ -1,12 +1,12 @@
-name: Publish SubX Package
+name: Publish tHelpers Package
 
 on:
   push:
     tags:
-      - "subx-v[0-9]+.[0-9]+.[0-9]+*"
+      - "t_helpers-v[0-9]+.[0-9]+.[0-9]+*"
 
 jobs:
   call-publish-workflow:
     uses: ./.github/workflows/publish_package.yml
     with:
-      packageName: "subx"
+      packageName: "t_helpers"
