--- a/.github/workflows/publish_tcache.yml
+++ b/.github/workflows/publish_tcache.yml
@@ -1,12 +1,12 @@
-name: Publish SubX Package
+name: Publish tCache Package
 
 on:
   push:
     tags:
-      - "subx-v[0-9]+.[0-9]+.[0-9]+*"
+      - "t_cache-v[0-9]+.[0-9]+.[0-9]+*"
 
 jobs:
   call-publish-workflow:
     uses: ./.github/workflows/publish_package.yml
     with:
-      packageName: "subx"
+      packageName: "t_cache"
