--- a/packages/bloc/example/pubspec.yaml
+++ b/packages/bloc/example/pubspec.yaml
@@ -1,17 +1,16 @@
 dependencies:
-  fastyle_core: ^0.0.51+1
   flutter:
     sdk: flutter
-  go_router: ^13.2.0
+  go_router: ^14.1.3
   tbloc: ^0.24.0
 dev_dependencies:
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: '>=3.16.0'
-  sdk: '>=3.2.0 <4.0.0'
+  flutter: ">=3.16.0"
+  sdk: ">=3.2.0 <4.0.0"
 flutter:
   uses-material-design: true
 name: tbloc_example
