--- a/packages/enhance/pubspec.yaml
+++ b/packages/enhance/pubspec.yaml
@@ -1,18 +1,18 @@
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^13.2.0
+  go_router: ^14.1.3
   rational: ^2.2.2
   t_helpers: ^0.0.55
 description: A dart library provide a bunch of extenstion.
 dev_dependencies:
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: '>=3.16.0'
-  sdk: '>=3.2.0 <4.0.0'
+  flutter: ">=3.16.0"
+  sdk: ">=3.2.0 <4.0.0"
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/enhance/issues
 name: tenhance
 repository: https://github.com/tyrcord/t/tree/main/packages/enhance
