--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -2,22 +2,23 @@ dependencies:
   diacritic: ^0.1.5
   flutter:
     sdk: flutter
-  go_router: ^13.2.0
-  intl: ^0.18.1
+  go_router: ^14.1.3
+  intl: ^0.19.0
   rational: ^2.2.2
   tenhance: ^0.0.11
   tmodel: ^0.5.15
   tsub: ^1.12.0
-description: A collection of helper functions to simplify common programming tasks
+description:
+  A collection of helper functions to simplify common programming tasks
   in Dart.
 dev_dependencies:
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: '>=3.16.0'
-  sdk: '>=3.2.0 <4.0.0'
+  flutter: ">=3.16.0"
+  sdk: ">=3.2.0 <4.0.0"
 name: t_helpers
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 version: 0.0.55
