--- a/packages/model/pubspec.yaml
+++ b/packages/model/pubspec.yaml
@@ -5,13 +5,13 @@ dependencies:
   t_helpers: ^0.0.55
 description: A dart library that helps you to manage model (blueprint) objects.
 dev_dependencies:
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: '>=3.16.0'
-  sdk: '>=3.2.0 <4.0.0'
+  flutter: ">=3.16.0"
+  sdk: ">=3.2.0 <4.0.0"
 homepage: https://github.com/tyrcord/t/tree/main/packages/model
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
 name: tmodel
