--- a/packages/store/pubspec.yaml
+++ b/packages/store/pubspec.yaml
@@ -4,21 +4,21 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  meta: ^1.10.0
-  path: ^1.8.3
+  meta: ^1.12.0
+  path: ^1.9.0
   rxdart: ^0.27.7
   t_helpers: ^0.0.55
   tmodel: ^0.5.15
   tsub: ^1.12.0
 description: A dart library that helps you to manage and store entity objects.
 dev_dependencies:
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: '>=3.16.0'
-  sdk: '>=3.2.0 <4.0.0'
+  flutter: ">=3.16.0"
+  sdk: ">=3.2.0 <4.0.0"
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tstore/issues
 name: tstore
 repository: https://github.com/tyrcord/t/tree/main/packages/tstore
