--- a/packages/bloc/pubspec.yaml
+++ b/packages/bloc/pubspec.yaml
@@ -2,9 +2,9 @@ dependencies:
   async: ^2.11.0
   flutter:
     sdk: flutter
-  meta: ^1.12.0
-  provider: ^6.1.1
-  rxdart: ^0.27.7
+  meta: ^1.15.0
+  provider: ^6.1.2
+  rxdart: ^0.28.0
   subx: ^1.17.0
   tmodel: ^0.5.18
   tuple: ^2.0.2
@@ -16,8 +16,8 @@ dev_dependencies:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: '>=3.16.0'
-  sdk: '>=3.2.0 <4.0.0'
+  flutter: ">=3.24.0"
+  sdk: ">=3.5.0 <4.0.0"
 homepage: https://github.com/tyrcord/t/tree/main/packages/tbloc
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tbloc/issues
 name: tbloc
