--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -2,13 +2,14 @@ dependencies:
   diacritic: ^0.1.5
   flutter:
     sdk: flutter
-  go_router: ^14.1.3
+  go_router: ^14.2.7
   intl: ^0.19.0
-  rational: ^2.2.2
+  rational: ^2.2.3
   tenhance: ^0.0.14
   tmodel: ^0.5.18
   tsub: ^1.15.0
-description: A collection of helper functions to simplify common programming tasks
+description:
+  A collection of helper functions to simplify common programming tasks
   in Dart.
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -16,8 +17,8 @@ dev_dependencies:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: '>=3.16.0'
-  sdk: '>=3.2.0 <4.0.0'
+  flutter: ">=3.24.0"
+  sdk: ">=3.5.0 <4.0.0"
 name: t_helpers
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 version: 0.0.58
