--- a/packages/bloc/example/pubspec.yaml
+++ b/packages/bloc/example/pubspec.yaml
@@ -2,7 +2,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^14.1.3
-  tbloc: ^0.25.2+2
+  tbloc: ^0.25.3
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
