--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -5,9 +5,9 @@ dependencies:
   go_router: ^14.8.1
   intl: ^0.19.0
   rational: ^2.2.3
-  tenhance: ^0.0.15+2
-  tmodel: ^0.5.19+2
-  tsub: ^1.16.0
+  tenhance: ^0.0.16
+  tmodel: ^0.5.20
+  tsub: ^1.17.0
 description:
   A collection of helper functions to simplify common programming tasks
   in Dart.
@@ -21,4 +21,4 @@ environment:
   flutter: ">=3.29.0 <4.0.0"
 name: t_helpers
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
-version: 0.0.61
+version: 0.0.62
