--- a/packages/logger/pubspec.yaml
+++ b/packages/logger/pubspec.yaml
@@ -2,8 +2,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.19.0
-  t_helpers: ^0.0.61
-  tenhance: ^0.0.15+2
+  t_helpers: ^0.0.62
+  tenhance: ^0.0.16
 description: A dart library that helps you to logs your app.
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -16,4 +16,4 @@ environment:
 homepage: https://github.com/tyrcord/t/tree/main/packages/logger
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
 name: tlogger
-version: 0.0.16+2
+version: 0.0.17
