--- a/packages/store/pubspec.yaml
+++ b/packages/store/pubspec.yaml
@@ -7,9 +7,9 @@ dependencies:
   meta: ^1.16.0
   path: ^1.9.1
   rxdart: ^0.28.0
-  t_helpers: ^0.0.61
-  tmodel: ^0.5.19+2
-  tsub: ^1.16.0
+  t_helpers: ^0.0.62
+  tmodel: ^0.5.20
+  tsub: ^1.17.0
 description: A dart library that helps you to manage and store entity objects.
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -22,4 +22,4 @@ environment:
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tstore/issues
 name: tstore
 repository: https://github.com/tyrcord/t/tree/main/packages/tstore
-version: 0.8.30+2
+version: 0.8.31
