--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -3,7 +3,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^14.8.1
-  intl: ^0.19.0
+  intl: '>=0.17.0-0 <0.21.0'
   rational: ^2.2.3
   tenhance: ^0.0.17
   tmodel: ^0.5.21
