--- a/packages/store/pubspec.yaml
+++ b/packages/store/pubspec.yaml
@@ -7,9 +7,9 @@ dependencies:
   meta: ^1.16.0
   path: ^1.9.0
   rxdart: ^0.28.0
-  t_helpers: ^0.0.64
-  tmodel: ^0.5.21+1
-  tsub: ^1.18.0
+  t_helpers: ^0.0.65
+  tmodel: ^0.5.22
+  tsub: ^1.19.0
 description: A dart library that helps you to manage and store entity objects.
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -22,4 +22,4 @@ environment:
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tstore/issues
 name: tstore
 repository: https://github.com/tyrcord/t/tree/main/packages/tstore
-version: 0.8.32+1
+version: 0.8.33
